# NLP_FINAL_PROJ

./: .gitignore  README.md  individual_report_kartik.md  pyproject.toml  requirements.txt  requirements_no_torch.txt  testing.ipynb
Code/api/: api_server.py  models.py  routes.py
Code/cli/: ingest_data.py
Code/configs/: prompts.yaml
Code/core/: schema.py  session_manager.py  settings.py
Code/frontend/: app.py  package-lock.json  package.json
Code/frontend/app/: layout.tsx  page.tsx
Code/frontend/app/flashcards/: flashcards-page-client.tsx  page.tsx
Code/frontend/app/quiz/: page.tsx  quiz-page-client.tsx
Code/frontend/app/status/: page.tsx  status-page-client.tsx
Code/frontend/app/summary/: page.tsx  summary-page-client.tsx
Code/frontend/components/: markdown-math.tsx
Code/ingestion/: document_ocr.py  image_ocr.py  pdf_loader.py  router.py  video_ingest.py
Code/rag/: embedder.py  quiz_tools.py  retriever.py  vector_store.py
Code/scripts/: RAGPipeline.py  document_ocr.py  embedder.py  ingest_data.py  orchestrator.py  rag_pipeline.py  run_demo.py  schema.py  video_ingest.py
base_ipynb/: aditi_mvp.ipynb
raye-oji-individual-report/Code/: raye_orchestrator.py  raye_ragpipeline.py
