[project]
name = "nlp-final-proj"
version = "0.1.0"
description = "RAG pipeline with BGE-M3 and Qwen"
requires-python = ">=3.10"

dependencies = [
    "pymupdf",
    "sentence-transformers",
    "faiss-cpu",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "gradio",
    "numpy",
    "torch==2.6.0+cu118",
    "torchvision==0.21.0+cu118",
    "torchaudio==2.6.0+cu118"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" }
]
torchvision = [
  { index = "pytorch-cu118" }
]
torchaudio = [
  { index = "pytorch-cu118" }
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true