[project]
name = "nlp-final-proj"
version = "0.1.0"
description = "RAG pipeline with BGE-M3, Qwen, OCR, and video transcript support"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pymupdf",
    "sentence-transformers",
    "faiss-cpu",
    "transformers==4.47.1",
    "accelerate",
    "bitsandbytes",
    "gradio",
    "numpy",
    "pyyaml",

    "opencv-python",
    "pillow",
    "moviepy",
    "faster-whisper",
    "paddleocr",

    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]
torchaudio = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true